project links and pictures added

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -11,8 +11,9 @@ body {
 }
 
 .blarg {
-	border-radius: 50%;
-	position: relative;
+	border-radius: 5%;
+	margin: 20px;
+	/*position: relative;
 	right: 30%;
-	left: 35%;
+	left: 35%;*/
 }
