about me added by me

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,1 +1,26 @@
-<h1>hello world</h1>
+<div class="page-header">
+	<h1>About</h1>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-4 col-xs-offset-4">
+			<hr>
+			<h2 style="text-align: center;">About the Author</h2>
+			<hr>
+		</div>
+	</div>
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<div class="panel-body">
+			<p>My name is Will, and I'm a web-developer! I cut my teeth at General Assembly's web development bootcamp, and now I make apps and webpages. It's super great!</p>
+			<p>After completing the web development immersive course (WDI) at General Assembly, I was hired on as a teaching assistant for another iteration of the same. In that role I helped manage git repositories, provided code reviews for students, and helped to debug their programs and did my best to help them learn best practices and conceptually grasp the concepts covered therein.</p>
+			<p>Before I came to San Francisco in Septemeber, I spent my previous eight years working various positions in various restaurants in various parts of the country, where I learned a lot of skills involving communication, leadership, time and people management, and how to clean and cook chicken.</p>
+			<p>But eight years is a long time, and kitchen work is hard. I hung up my apron to search for challenges more intellectual in nature, and found the world of computers to be better use of my talents.</p>
+			<p>I'm passionate about people, ethics, the nature of existence, and the troubles that loom above our species. I (naively) seek to better the world through open-hearted example.</p>
+		</div>
+		<div class="panel panel-default col-xs-8 col-xs-offset-2">
+			<div class="panel-body">
+				<p>If you're reading this, feel free to send me an <a href="mailto:willcauthen50@gmail.com">email</a> saying anything that comes to mind. </p>
+			</div>
+		</div>
+	</div>
+</div>
