--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-md-3"></div>
 		<div class="col-md-6 jumbotron">
 			<div class="col-lg-4">
-				<%= link_to image_tag("blarg.jpg", size: '200x150', :class => 'blarg'), about_path %>
+				<%= link_to image_tag("blarg.jpg", :class => 'blarg'), about_path, :class => 'thumbnail' %>
 			</div>
 			<div class="col-lg-4"></div>
 			<div class="col-lg-4">
@@ -19,7 +19,7 @@
 				<p>Here is a description of looking for group</p>
 			</div>
 			<div class="col-lg-4">
-				<%= link_to image_tag("lfg.png", size: '300x150'), 'http://lfg-meetup.herokuapp.com/', :target => "_blank" %>
+				<%= link_to image_tag("lfg.png"), 'http://lfg-meetup.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
 		<div class="col-md-3"></div>
@@ -31,7 +31,7 @@
 				<p>here is the description</p>
 			</div>
 			<div class="col-lg-4">
-				<%= link_to image_tag("fortune2.png", size: '300x150'), 'https://nihilistic-fortune-cookies.herokuapp.com/', :target => "_blank" %>
+				<%= link_to image_tag("fortune2.png"), 'https://nihilistic-fortune-cookies.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
 		<div class="col-md-3"></div>
@@ -44,7 +44,7 @@
 			</div>
 			<div class="col-lg-4">
 				
-				<%= link_to image_tag("vagabond.png", size: '300x150'), 'https://projectvagabond.herokuapp.com/', :target => "_blank" %>
+				<%= link_to image_tag("vagabond.png"), 'https://projectvagabond.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
 		<div class="col-md-3"></div>
