index page is both responsive and descriptive

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,60 +1,49 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 jumbotron">
-			<div class="col-lg-4">
+		<div class="col-xs-10 jumbotron col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1">
 				<%= link_to image_tag("blarg.jpg", :class => 'blarg'), about_path, :class => 'thumbnail' %>
 			</div>
-			<div class="col-lg-4"></div>
-			<div class="col-lg-4">
+			<div class="col-md-10 col-md-offset-1">
 				<h3>Look on my works, ye mighty, and despair</h3>
 			</div>
 		</div>
-		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 jumbotron">
-			<div class="col-lg-4">
-				<p>Here is a description of looking for group</p>
+		<div class="col-xs-10 jumbotron col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1">
+				<p>Looking for Group is a meetup app for people who enjoy the ancient practice of table-top gaming. The app aims to help such individuals connect with one another through favorites and common interests, set up in the app.</p>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-md-10 col-md-offset-1">
 				<%= link_to image_tag("lfg.png"), 'http://lfg-meetup.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
-		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 jumbotron">
-			<div class="col-lg-4">
-				<p>here is the description</p>
+		<div class="col-xs-10 jumbotron col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1">
+				<p>A fun app I made for laughs. User smashes a fortune cookie and get a depressingly bleak fortune with three randomized numbers. There is also a very (very) simple game set up with the HTML canvas element. Fun for the whole family!</p>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-md-10 col-md-offset-1">
 				<%= link_to image_tag("fortune2.png"), 'https://nihilistic-fortune-cookies.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
-		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 jumbotron">
-			<div class="col-lg-4">
-				<p>here is the description</p>
+		<div class="col-xs-10 jumbotron col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1">
+				<p>Vagabond is a app for travelers with disabilities, and incorporates a Google maps API. Users can post in various cities about good (or bad) experiences they've had with accessibility in various restaurants, museums, landmarks, et cetera.</p>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-md-10 col-md-offset-1">
 				
 				<%= link_to image_tag("vagabond.png"), 'https://projectvagabond.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
 		</div>
-		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-3"></div>
 		<div class="col-md-6 jumbotron">
 			<div class="col-md-6">Col in a col</div>
 			<div class="col-md-6">Nested columns</div>
 		</div>
-		<div class="col-md-3"></div>
 	</div>
 </div>
