ready for viewing

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,6 +6,9 @@
 			</div>
 			<div class="col-md-10 col-md-offset-1">
 				<h3>Look on my works, ye mighty, and despair</h3>
+				<span class="label label-info">
+					CLICK ALL THE PICTURES!
+				</span>
 			</div>
 		</div>
 	</div>
@@ -38,12 +41,6 @@
 				
 				<%= link_to image_tag("vagabond.png"), 'https://projectvagabond.herokuapp.com/', :target => "_blank", :class => 'thumbnail' %>
 			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 jumbotron">
-			<div class="col-md-6">Col in a col</div>
-			<div class="col-md-6">Nested columns</div>
 		</div>
 	</div>
 </div>
