added snakeburger to portfolio pieces

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,4 +43,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-xs-10 jumbotron col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1">
+				<p>Snakeburgers! A satirical website that caters to you and your need for premium, naturally farmed snake meat and snake byproducts!</p>
+			</div>
+			<div class="col-md-10 col-md-offset-1">
+				
+				<%= link_to image_tag("snake-burger.jpg"), 'https://www.snakeburger.xyz', :target => "_blank", :class => 'thumbnail' %>
+			</div>
+		</div>
+	</div>
 </div>
