small edit to title text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
 				<%= link_to image_tag("blarg.jpg", :class => 'blarg'), about_path, :class => 'thumbnail' %>
 			</div>
 			<div class="col-md-10 col-md-offset-1">
-				<h3>Look on my works, ye mighty, and despair</h3>
+				<h3>Look upon my works, ye mighty</h3>
 				<span class="label label-info">
 					CLICK ALL THE PICTURES!
 				</span>
