new picture on landing page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,9 +13,7 @@ body {
 .blarg {
 	border-radius: 5%;
 	margin: 20px;
-	/*position: relative;
-	right: 30%;
-	left: 35%;*/
+	max-height: 300px;
 }
 
 div.panel-body {
