--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-10 jumbotron col-xs-offset-1">
 			<div class="col-md-10 col-md-offset-1">
-				<%= link_to image_tag("blarg.jpg", :class => 'blarg'), about_path, :class => 'thumbnail' %>
+				<%= link_to image_tag("wilbo.jpg", :class => 'blarg'), about_path, :class => 'thumbnail' %>
 			</div>
 			<div class="col-md-10 col-md-offset-1">
 				<h3>Look upon my works, ye mighty</h3>
