--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,14 +6,11 @@
 			</div>
 			<div class="col-md-10 col-md-offset-1">
 				<h3>Look upon my works, ye mighty</h3>
-				<span class="label label-info">
-					CLICK ALL THE PICTURES!
-				</span>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-10 jumbotron col-xs-offset-1">
+		<div class="col-xs-10 jumbotron col-xs-offset-1 header">
 			<div class="col-md-10 col-md-offset-1">
 				<p>Looking for Group is a meetup app for people who enjoy the ancient practice of table-top gaming. The app aims to help such individuals connect with one another through favorites and common interests, set up in the app.</p>
 			</div>
